Error Mitigation/MagiCoder/Data/javax_swing_colorchooser/javax_swing_colorchooserOutputResult.txt
Sample: DefaultColorSelectionModel_2
----------------------------------------------------------------
output:
./Data/javax_swing_colorchooser/javaFiles/DefaultColorSelectionModel_2.java:9: error: cannot find symbol
            public void stateChanged(java.util.Event e) {
                                              ^
  symbol:   class Event
  location: package java.util
1 error


================================================================

Sample: DefaultColorSelectionModel_4
----------------------------------------------------------------
stdout:
Selected Color: java.awt.Color[r=0,g=0,b=255]

================================================================

Sample: DefaultColorSelectionModel_5
----------------------------------------------------------------
================================================================

